Fix spacing in grunnlag

--- a/src/components/Grunnlag/Grunnlag.module.scss
+++ b/src/components/Grunnlag/Grunnlag.module.scss
@@ -1,5 +1,9 @@
 @use '../../scss/variables';
 
+.paddingLeft4 {
+  padding-left: var(--a-spacing-4);
+}
+
 .visListekomponenter {
   width: 100%;
   margin-top: var(--a-spacing-1);
@@ -21,7 +25,6 @@
     .navds-read-more__content {
       position: relative;
       width: 100%;
-      padding: var(--a-spacing-5) var(--a-spacing-4) 0 0;
       box-sizing: border-box;
 
       @media (min-width: variables.$a-breakpoint-lg) {
