--- a/src/components/Pensjonsavtaler/Pensjonsavtaler.module.scss
+++ b/src/components/Pensjonsavtaler/Pensjonsavtaler.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--a-spacing-4);
+  padding-left: var(--a-spacing-4);
 
   @media (min-width: variables.$a-breakpoint-lg) {
     max-width: variables.$container-max-width;
